<resources>
    <string name="app_name">CalculatorJAVA</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="buttonZero">0</string>
    <string name="buttonLeftScope">(</string>
    <string name="buttonRightScope">)</string>
    <string name="buttonRoot">√</string>
    <string name="buttonPower">x²</string>
    <string name="buttonAllClear">AC</string>
    <string name="buttonClear">C</string>
    <string name="buttonDelete">DEL</string>
    <string name="buttonDivide">/</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonEqual">=</string>
    <string name="buttonDot">,</string>
    <string name="buttonPlusMinus">+/-</string>
</resources>